--- a/app/src/main/res/layout/activity_find_friends.xml
+++ b/app/src/main/res/layout/activity_find_friends.xml
@@ -15,6 +15,8 @@
 
     <Button
         android:id="@+id/buttonSearchFriends"
+        android:background="@drawable/button"
+        android:textColor="@color/colorAccent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/buttonSearchFriends"
@@ -33,6 +35,8 @@
     <Button
         android:visibility="invisible"
         android:id="@+id/buttonAddFriend"
+        android:background="@drawable/button"
+        android:textColor="@color/colorAccent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/buttonAddFriend"
