--- a/app/src/main/res/layout/fragment_main_menu.xml
+++ b/app/src/main/res/layout/fragment_main_menu.xml
@@ -17,6 +17,8 @@
 
         <Button
             android:id="@+id/buttonPendingInvites"
+            android:background="@drawable/button"
+            android:textColor="@color/colorAccent"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
@@ -25,6 +27,8 @@
 
         <Button
             android:id="@+id/buttonMyFriends"
+            android:background="@drawable/button"
+            android:textColor="@color/colorAccent"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
@@ -33,6 +37,8 @@
 
         <Button
             android:id="@+id/buttonEditProfile"
+            android:background="@drawable/button"
+            android:textColor="@color/colorAccent"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
@@ -51,6 +57,8 @@
 
         <Button
             android:id="@+id/buttonUpdateStatus"
+            android:background="@drawable/button"
+            android:textColor="@color/colorAccent"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
@@ -59,6 +67,8 @@
 
         <Button
             android:id="@+id/buttonFindFriends"
+            android:background="@drawable/button"
+            android:textColor="@color/colorAccent"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
@@ -67,6 +77,8 @@
 
         <Button
             android:id="@+id/buttonQuit"
+            android:background="@drawable/button"
+            android:textColor="@color/colorAccent"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
