--- a/app/src/main/res/layout/popup_add_friend.xml
+++ b/app/src/main/res/layout/popup_add_friend.xml
@@ -39,6 +39,8 @@
 
         <Button
             android:layout_width="0dp"
+            android:background="@drawable/button"
+            android:textColor="@color/colorAccent"
             android:layout_height="match_parent"
             android:text="@string/yes"
             android:id="@+id/buttonAddFriedConfirm"
@@ -48,6 +50,8 @@
 
         <Button
             android:layout_width="0dp"
+            android:background="@drawable/button"
+            android:textColor="@color/colorAccent"
             android:layout_height="match_parent"
             android:text="@string/no"
             android:id="@+id/buttonAddFriendCanel"
