--- a/app/src/main/res/layout/popup_update_status.xml
+++ b/app/src/main/res/layout/popup_update_status.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:id="@+id/popup_element"
+              android:backgroundTint="@color/colorAccent"
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
@@ -15,6 +16,7 @@
         android:editable="false"
         android:layout_weight="0.2"
         android:textSize="20sp"
+        android:textColor="@color/colorPrimaryDark"
         android:textAlignment="center"
         android:layout_margin="5dp"
         />
@@ -22,11 +24,15 @@
     <EditText
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:textColor="@color/colorPrimaryDark"
         android:hint="@string/yourCurrentStatusPopUpHint"
+        android:textColorHint="@color/colorPrimaryDark"
         android:editable="true"
         android:id="@+id/textStatus"
         android:layout_weight="0.6"
         android:layout_margin="5dp"
+        android:inputType="text"
+        android:imeOptions="actionSend"
         />
 
     <LinearLayout
@@ -40,6 +46,8 @@
 
         <Button
             android:layout_width="0dp"
+            android:background="@drawable/button"
+            android:textColor="@color/colorAccent"
             android:layout_height="match_parent"
             android:text="@string/buttonUpdateMyStatusPopUpSend"
             android:id="@+id/buttonUpdate"
@@ -49,6 +57,8 @@
 
         <Button
             android:layout_width="0dp"
+            android:background="@drawable/button"
+            android:textColor="@color/colorAccent"
             android:layout_height="match_parent"
             android:text="@string/buttonCancelStatusUpdate"
             android:id="@+id/buttonCanel"
