--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -19,6 +19,7 @@
         android:hint="@string/username_hint"
         android:textColor="@color/colorPrimaryDark"
         android:textColorHint="@color/colorPrimaryDark"
+        android:textCursorDrawable="@null"
         >
 
         <requestFocus/>
@@ -34,6 +35,7 @@
         android:hint="@string/password_hint"
         android:textColorHint="@color/colorPrimaryDark"
         android:textColor="@color/colorPrimaryDark"
+        android:textCursorDrawable="@null"
         android:inputType="textPassword"/>
 
     <Button
@@ -46,15 +48,18 @@
         android:text="@string/login_button_label"
         android:textColor="@color/colorAccent"/>
 
-    <TextView
+    <Button
         android:id="@+id/signUpText"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/loginButton"
-        android:layout_marginTop="69dp"
         android:gravity="center"
+        android:layout_marginTop="20dp"
         android:text="@string/sign_up_text"
-        android:textColor="@color/colorPrimaryDark"
-        android:textSize="20sp"/>
+        android:background="@drawable/button"
+        android:padding="5dp"
+        android:textColor="@color/colorAccent"
+        android:textAllCaps="false"
+        />
 
 </RelativeLayout>
