--- a/app/src/main/res/layout/list_item_my_friend.xml
+++ b/app/src/main/res/layout/list_item_my_friend.xml
@@ -1,10 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
-          android:layout_width="fill_parent"
-          android:layout_height="wrap_content"
-          android:gravity="center"
-          android:padding="5dp"
-          android:singleLine="true"
-          android:textSize="20sp"
-          android:ellipsize="end">
-</TextView>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:layout_width="fill_parent"
+              android:layout_height="wrap_content"
+              android:background="@drawable/friend_item_shape"
+              android:orientation="horizontal">
+
+    <ImageView
+        android:id="@+id/friendItemPhoto"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginLeft="5dp"
+        android:src="@drawable/default_profile_photo"/>
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <RelativeLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content">
+
+            <TextView android:id="@+id/friendItemName"
+                      xmlns:android="http://schemas.android.com/apk/res/android"
+                      android:layout_width="wrap_content"
+                      android:layout_height="wrap_content"
+                      android:ellipsize="end"
+                      android:layout_weight="0.6"
+                      android:padding="4dp"
+                      android:singleLine="true"
+                      android:layout_alignParentLeft="true"
+                      android:textColor="@color/colorAccent"
+                      android:textSize="20sp">
+            </TextView>
+
+            <TextView android:id="@+id/friendItemAddress"
+                      xmlns:android="http://schemas.android.com/apk/res/android"
+                      android:layout_width="wrap_content"
+                      android:layout_height="wrap_content"
+                      android:ellipsize="end"
+                      android:padding="4dp"
+                      android:layout_alignParentRight="true"
+                      android:singleLine="true"
+                      android:textColor="@color/colorAccent"
+                      android:textSize="15sp">
+            </TextView>
+
+        </RelativeLayout>
+
+        <TextView
+            android:id="@+id/friendItemStatus"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:padding="3dp"
+            android:singleLine="true"
+            android:text="Podpis"
+            android:textColor="@color/colorAccent"
+            android:textSize="15sp"/>
+    </LinearLayout>
+</LinearLayout>
